--- a/style.css
+++ b/style.css
@@ -1,14 +1,50 @@
 * {
-    box-sizing: border-box;
-    font-family: "Rubik", "Lemonada", Arial;
+	box-sizing: border-box;
+	font-family: 'Rubik', 'Lemonada', Arial;
 }
 
 body {
-    padding: 0;
+	background: midnightblue;
+	padding: 0;
+	margin: 0;
+	display: flex;
+	width: 100vw;
+	height: 100vh;
+	justify-content: center;
+	align-items: center;
+}
+.board {
+	width: 800px;
+	max-width: 80%;
+	padding: 15px;
+	border: 4px solid gray;
+	border-radius: 4px;
+}
+
+.category {
+	background: white;
+	box-sizing: border-box;
+	align-items: center;
+	justify-content: center;
+	padding: 4px;
     margin: 0;
+    border: 2px solid black;
+    border-radius: 2px;
+}
+
+#questions {
+    margin: 10px 0;
+    padding: 4px;
+    border: 2px solid black;
+    background: white;
+
+}
+
+.answer-btn {
     display: flex;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    margin: 5px 0;
+}
+.button {
+    margin: 5px 0;
 }
