--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 	height: 100vh;
 	justify-content: center;
 	align-items: center;
-    font-size: 20px;
+	font-size: 20px;
 }
 .board {
 	width: 800px;
@@ -22,7 +22,7 @@ body {
 	border-radius: 4px;
 }
 
-.category {
+#category {
 	background: white;
 	padding: 10px;
 	margin: 0;
@@ -31,7 +31,7 @@ body {
 	text-align: center;
 }
 
-.questions {
+#questions {
 	margin: 10px 0;
 	padding: 4px;
 	border: 2px solid black;
@@ -49,38 +49,40 @@ body {
 	background: gray;
 	border-radius: 5px;
 	color: white;
-    font-size: 18px;
+	font-size: 18px;
 }
 .button:hover {
 	background: white;
 	color: gray;
 }
 .button.correct {
-    background: limegreen;
+	background: limegreen;
 }
- .button.incorrect {
-     background: red;
- }
+.button.incorrect {
+	background: red;
+}
 
-#continue, #start {
+#continue,
+#start {
 	background: lightcoral;
 	border-radius: 5px;
 	color: white;
 	padding: 10px;
-    font-size: 1.5rem;
+	font-size: 1.5rem;
 }
 
-#continue:hover, #start:hover {
+#continue:hover,
+#start:hover {
 	color: lightcoral;
 	background: white;
 }
 
 .controls {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .hide-content {
-    display: none;
+	display: none;
 }
