--- a/style.css
+++ b/style.css
@@ -8,19 +8,45 @@ body {
 	padding: 0;
 	margin: 0;
 	font-size: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+ 
+.start-screen {
+	max-width: 300px;
+	background: white;
+	border-radius: 10px;
+	margin: 30px auto;
+	padding: 30px;
+	/* Reference: https://stackoverflow.com/questions/982054/how-to-center-an-element-in-the-middle-of-the-browser-window */
+	position: absolute;
+	top: 50%;
+	left: 50%;
+}
+
+.start-screen .button {
+	display: flex;
+  	justify-content: center;
+  	align-items: center;
 }
 
 .button {
-	margin: 5px 0;
-	padding: 5px 10px;
+	max-width: 600px;
+	margin: 15px 0;
+	padding: 13px 15px;
 	border-radius: 5px;
 	font-size: 18px;
 	background: lightcoral;
 	color: white;
 	border: 2px solid gray;
-	display: flex;
 }
 
+.continue-next-question{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
 .button:hover {
 	color: lightcoral;
@@ -33,8 +59,12 @@ body {
 	border-radius: 5px;
 	margin: 30px auto;
 	padding: 30px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
 
 }
+
 .category {
 	background: white;
 	color: black;
@@ -62,15 +92,17 @@ body {
 .correct-text {
 	color: limegreen;
 	font-size: 35px;
-	display: none;
 	font-weight: 400;
+	text-align: center;
+	text-transform: uppercase;
 }
 
 .incorrect-text {
 	color: red;
 	font-size: 35px;
-	display: none;
 	font-weight: 400;
+	text-align: center;
+	text-transform: uppercase;
 }
 
 
@@ -86,18 +118,39 @@ body {
 
 }
 
-
-.question-box .answers-box .option:hover {
+.score-box{
+	max-width: 600px;
 	background: white;
-	color: gray;
+	border-radius: 10px;
+	margin: 30px auto;
+	padding: 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
 }
-.question-box .answers-box .option.correct {
-	background: limegreen;
+
+.scoreboard{
+	font-size: 36px;
+    line-height: 42px;
+    color: black;
+    margin: 30px;
 }
-.question-box .answers-box .option.incorrect {
-	background: red;
+
+.score{
+	font-size: 24px;
+    padding: 10px;
+	display: inline-block;
 }
+
+.score-box .btn{
+	margin-right: 20px;
+}
+	
 
 .hide {
-	display: none;
+		display: none;
 }
