--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 
 body {
 	background: lightblue;
-	
 	padding: 0;
 	margin: 0;
 	font-size: 20px;
@@ -152,10 +151,15 @@ body {
 	display: inline-block;
 }
 
-.score-box .btn{
-	margin-right: 20px;
+.question-box .score-board-btn{
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-	
+
+.question-box .score-board-btn .button{
+	text-transform: uppercase;
+}
 
 .hide {
 		display: none;
