--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 * {
 	box-sizing: border-box;
 	font-family: 'Rubik', 'Lemonada', Arial;
+	background-size: cover;
 }
 
 body {
 	background: lightblue;
+	background-image: url(MathMeme.jpg);
 	padding: 0;
 	margin: 0;
 	font-size: 20px;
-	/* display: flex;
-	justify-content: center;
-	align-items: center; */
+	background-size: cover;
+
 }
+
  
 .start-screen {
 	max-width: 600px;
@@ -57,8 +59,9 @@ body {
 }
 
 .question-box{
-	max-width: 600px;
+	max-width: 800px;
 	background: white;
+	border: 8px dotted gray;
 	border-radius: 10px;
 	margin: 30px auto;
 	padding: 30px;
@@ -151,13 +154,13 @@ body {
 	display: inline-block;
 }
 
-.question-box .score-board-btn{
+.score-board-btn{
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-.question-box .score-board-btn .button{
+.score-board-btn .button{
 	text-transform: uppercase;
 }
 
