--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
   	align-items: center;
 	font-size: 50px;	
 	position: relative;
+	cursor: pointer;
 }
 
 .button {
@@ -45,6 +46,7 @@ body {
 	background: lightcoral;
 	color: white;
 	border: 2px solid gray;
+	cursor: pointer;
 }
 
 .continue-next-question{
@@ -122,8 +124,16 @@ body {
 	border-radius: 5px;
 	margin: 15px 0;
 	border: 2px solid black;
+	cursor: pointer;
+}
+
+.question-box .answers-box .option.final-answer-chosen {
+	pointer-events: none;
+	cursor: default;
 
 }
+
+
 
 .score-box{
 	max-width: 600px;
